# VideoCaptionerServer

./: .dockerignore  .env.example  .gitignore  CONFIGURATION.md  Dockerfile  Makefile  README.md  RPC_README.md  SUBTITIZE_RPC_IMPLEMENTATION.md  deploy-docker.sh  docker-compose.override.yml.example  docker-compose.yml  example_rpc_integration.py  main.py  main_gui.py.bak  pyproject.toml  rebuild.sh  rpc_server.py  settings.json.docker  test-cudnn-runtime.sh  test-docker.sh  test_cudnn.py  test_faster_whisper_python.py  test_rpc_api.py
app/common/: config.py  json_config.py
app/core/: entities.py
app/core/asr/: __init__.py  faster_whisper.py  faster_whisper_python.py  transcribe.py
app/core/llm/: client.py
app/rpc/: __init__.py  flask_server.py  rpc_handler.py  rpc_service.py  signalr_client.py  subtitize_executor.py  task_manager.py
docs/: README.md  index.md
docs/api/: LANGUAGE_PARAMETER_SUPPORT.md  quickstart.md  rpc-api.md
docs/configuration/: settings.md
docs/deployment/: DOCKER_DEPLOYMENT.md  master-worker-architecture.md
docs/legacy/: README.md  README_NO_UI.md  RPC_API_GUIDE.md  RPC_QUICKSTART.md
tests/examples/: README.md  test_language_param.py  test_rpc.py
