[project]
name = "videocaptioner"
version = "0.1.0"
description = "Video subtitle generation and translation tool"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.4",
    "openai>=1.97.1",
    "diskcache>=5.6.3",
    "yt_dlp>=2025.7.21",
    "modelscope>=1.28.1",
    "psutil>=7.0.0",
    "json-repair>=0.49.0",
    "langdetect>=1.0.9",
    "pydub",
    "tenacity",
    "GPUtil>=1.4.0",
    "flask>=3.1.2",
    "signalrcore>=0.9.5",
    "flasgger>=0.9.7.1",
    "faster-whisper>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
